--- a/css/styles.css
+++ b/css/styles.css
@@ -18,7 +18,7 @@
   --portfolio-project-color: rgba(238, 238, 238, 1);
   --primary-icon-fill: rgba(175, 177, 184, 1);
   --primary-cards-color: rgba(33, 150, 243, 0.9);
-  --transition: 250ms; 
+  --transition: 250ms;
 }
 
 html {
@@ -100,7 +100,7 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
-  
+
 
 }
 
@@ -108,13 +108,20 @@ body {
   position: absolute;
   top: 50%;
   left: 50%;
+
   transform: translate(-50%, -50%);
-  padding: 8px;
+  padding: 40px;
   min-width: 528px;
   min-height: 581px;
   border-radius: 4px;
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
   background-color: var(--primary-white-color);
+}
+
+
+.butt {
+  display: block;
+  text-align: center;
 }
 
 .backdrop.is-hidden {
@@ -124,6 +131,8 @@ body {
 }
 
 .modal-close {
+  display: flex;
+  align-items: center;
   position: absolute;
   cursor: pointer;
   right: 0;
@@ -136,15 +145,267 @@ body {
   background-color: var(--primary-white-color);
   border: 1px solid rgba(0, 0, 0, 0.1);
 
-  transition-property: box-shadow;
-  transition-duration:var(--transition);
+  transition-property: box-shadow fill;
+  transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-close:hover,
 .modal-close:focus {
   box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.25);
+  fill: var(--accent-color);
 }
+
+.modal-sign h2 {
+  font-weight: 700;
+  font-size: 20px;
+  margin-bottom: 12px;
+  line-height: 1.15;
+  letter-spacing: 0.03em;
+  color: var(--title-text-color);
+}
+
+.modal-sign {
+  align-items: center;
+  justify-content: center;
+
+}
+
+.form {
+  width: 448px;
+  height: 342px;
+}
+
+.form-field {
+  position: relative;
+  display: flex;
+  flex-direction: column;
+  margin-top: 10px;
+}
+
+.form-field label {
+  font-weight: 400;
+  font-size: 12px;
+  line-height: 1.16;
+  margin-bottom: 4px;
+  letter-spacing: 0.01em;
+
+}
+
+
+
+.form-field input {
+  padding: 12px 42px;
+  height: 40px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition-property: border;
+  transition-duration: var(--transition);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field input:focus {
+  border: 2px solid var(--accent-color);
+}
+
+.form-field textarea {
+  padding: 12px 16px;
+  border: 1px solid rgba(33, 33, 33, 0.2);
+  border-radius: 4px;
+
+  transition-property: border;
+  transition-duration: var(--transition);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.form-field textarea:focus {
+  border: 2px solid var(--accent-color);
+}
+
+.form-field ::placeholder {
+  color: rgba(117, 117, 117, 0.5);
+}
+
+.form-field {
+  position: relative;
+}
+
+.icons-form {
+  position: absolute;
+  top: 29px;
+  ;
+  left: 12px;
+
+  transition-property: fill;
+  transition-duration: var(--transition);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+
+}
+
+
+.form-input:focus+.icons-form {
+  fill: var(--accent-color);
+
+}
+
+.treaty-conditions {
+  color: var(--accent-color);
+}
+
+textarea {
+  resize: none;
+  height: 120px;
+}
+
+.tex-conditions {
+  font-weight: 400;
+  font-size: 14px;
+  line-height: 1.71;
+  letter-spacing: 0.03em;
+}
+
+.checkbox-conditions{
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin-top: 27px;
+  margin-bottom: 30px;
+}
+
+.checkbox {
+  position: absolute;
+  width: 1px;
+  height: 1px;
+  margin: -1px;
+  border: 0;
+  padding: 0;
+  white-space: nowrap;
+  clip-path: inset(100%);
+  clip: rect(0 0 0 0);
+  overflow: hidden;
+
+
+  transition-property: border-color background-color;
+  transition-duration: var(--transition);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.checkbox:checked~.tex-conditions::before {
+  border-color: var(--accent-color);
+  background-color: var(--accent-color);
+  background-image: url(../images/icon.check.svg);
+  background-origin: content-box;
+
+}
+
+
+
+.tex-conditions::before {
+  position: absolute;
+  top: 50%;
+  left:0;
+  transform: translateY(-60%);
+  
+  
+  content: "";
+  display: inline-block;
+  width: 15px;
+  height: 15px;
+  border: 2px solid var(--title-text-color);
+  border-radius: 4px;
+
+}
+
+.button-modal {
+  border: none;
+  box-sizing: border-box;
+  font-weight: 700;
+  font-size: 16px;
+  line-height: 1.9;
+  letter-spacing: 0.06em;
+  align-items: center;
+  text-align: center;
+}
+
+.button-modal {
+  border-radius: 4px;
+  border: none;
+  padding: 6px 22px;
+  cursor: pointer;
+  width: 200px;
+  height: 50px;
+  text-align: center;
+  color: var(--primary-white-color);
+  background-color: var(--accent-color);
+
+  transition-property: background-color box-shadow;
+  transition-duration: var(--transition);
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.button-modal:hover,
+.button-modal:focus {
+  background-color: rgb(0, 110, 255);
+  box-shadow: 0px 4px 4px rgba(0, 0, 0, 0.15);
+}
+
+.subscription {
+  display: flex;
+  flex-direction: column;
+  position: relative;
+  width: 570px;
+  height: 86px;
+}
+
+.subscription-label {
+  font-weight: 700;
+  font-size: 14px;
+  line-height: 1.14;
+  letter-spacing: 0.03em;
+  color: var(--primary-white-color);
+  margin-bottom: 20px;
+}
+
+.subscription-input {
+  padding: 15px 16px;
+  border-radius: 4px;
+  border: 1px solid rgba(255, 255, 255, 0.3);
+  width: 358px;
+  height: 50px;
+  background-color: var(--primary-background-color);
+}
+
+.subscription-input::placeholder {
+  font-weight: 400;
+  font-size: 16px;
+  line-height: 1.25;
+  letter-spacing: 0.03em;
+  color: var(--foorer-text-color);
+
+}
+
+.button-submit {
+  display: flex;
+  position: absolute;
+  align-items: center;
+  justify-content:space-around;
+  right: 0;
+  bottom: 0;
+}
+
+.send {
+  display: flex;
+  margin-left: 10px;
+}
+
+.send-icons {
+  fill: var(--primary-white-color);
+}
+
+
+
 
 /* хедер */
 .header-decor {
@@ -245,7 +506,7 @@ body {
   fill: var(--primary-text-color);
 
   transition-property: fill;
-  transition-duration:var(--transition);
+  transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 
 }
@@ -346,7 +607,7 @@ body {
   border-radius: 50%;
 
   transition-property: background-color;
-  transition-duration:var(--transition);
+  transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -383,7 +644,7 @@ body {
   overflow: hidden;
 }
 
-.filter-button{
+.filter-button {
   border-radius: 4px;
   border: none;
   padding: 10px 32px;
@@ -403,9 +664,9 @@ body {
   padding: 6px 22px;
   min-width: 70px;
   text-align: center;
-  color:var(--title-text-color); 
-  background-color:var(--primary-button-color) ;
-  
+  color: var(--title-text-color);
+  background-color: var(--primary-button-color);
+
   transition-property: background-color filter color;
   transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
@@ -463,12 +724,12 @@ body {
   padding: 20px 24px;
   border: 1px solid #eeeeee;
   border-top: 0;
-  
+
 }
 
-.cards{
-  transition-property:filter;
-  transition-duration:var(--transition);
+.cards {
+  transition-property: filter;
+  transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -518,7 +779,7 @@ body {
   background-color: var(--primary-cards-color);
 
   transform: translateY(100%);
-  transition-duration:var(--transition);
+  transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -815,7 +1076,7 @@ body {
   text-align: center;
 } */
 
-.button{
+.button {
   display: inline-block;
   font-family: inherit;
   font-weight: 500;
@@ -824,13 +1085,13 @@ body {
   cursor: pointer;
   text-align: center;
   letter-spacing: 0.03em;
-  color:var(--title-text-color);
+  color: var(--title-text-color);
   background-color: var(--primary-button-color);
 
 
   transition-property: background-color;
   transition-duration: var(--transition);
-  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1); 
+  transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .button:focus,
@@ -845,7 +1106,7 @@ body {
 }
 
 .button.primary:hover,
-.button.primary:focus{
+.button.primary:focus {
   background-color: rgb(0, 110, 255);
 }
 
@@ -856,7 +1117,7 @@ body {
   color: var(--title-text-color);
   background-color: var(--foorer-text-color);
 
-  
+
 }
 
 /* ПОРТФОЛИО */
@@ -925,7 +1186,7 @@ body {
   border-radius: 4px;
 
 
-  transition-property:border-color;
+  transition-property: border-color;
   transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
 }
@@ -1012,6 +1273,10 @@ footer .logo {
   transition-property: color;
   transition-duration: var(--transition);
   transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-media {
+  margin-right: 93px;
 }
 
 .strong-media {
