--- a/css/styles.css
+++ b/css/styles.css
@@ -374,6 +374,7 @@ textarea {
 .subscription-label {
   font-weight: 700;
   font-size: 14px;
+  text-transform: uppercase;
   line-height: 1.14;
   letter-spacing: 0.03em;
   color: var(--primary-white-color);
