--- a/css/styles.css
+++ b/css/styles.css
@@ -101,7 +101,7 @@ body {
   height: 100%;
   background-color: rgba(0, 0, 0, 0.2);
 
-
+  transition: opacity 500ms linear, visibility 500ms linear;
 }
 
 .modal {
@@ -136,8 +136,10 @@ transform: translate(-50%, -50%) scale(0) rotate(90deg);}
 .backdrop.is-hidden {
   visibility: hidden;
   opacity: 0;
-  pointer-events: none;
+  pointer-events: none; 
 }
+
+
 
 .modal-close {
   display: flex;
